--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         run: flake8 src --max-line-length=88
 
       - name: Run Tests
-        run: pytest src/tests.py
+        run: pytest tests
 
       - name: Stop Docker Containers
         run: docker-compose down
